src/crode/test/invalid/invalidModByZero.crode
canvas "InvalidModByZero" width 800 height 600 {
  let x = 10 mod 0

  let dot = circle {
    radius 5
    color black
  }

  draw dot at (x, 100)
}
